--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "dashboard-api",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "",
-  "main": "index.ts",
+  "main": "src/main.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/main.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "tslog": "^3.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "prettier": "^2.6.2"
   }
 }
