--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "dashboard-api",
-  "version": "1.0.0",
-  "type": "commonjs",
-  "description": "",
-  "main": "src/main.ts",
-  "scripts": {
-    "start": "node dist/main.js",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1",
-    "tslog": "^3.3.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "prettier": "^2.6.2"
-  }
+	"name": "dashboard-api",
+	"version": "1.0.0",
+	"type": "commonjs",
+	"description": "",
+	"main": "src/main.ts",
+	"scripts": {
+		"start": "node dist/main.js",
+		"build": "tsc",
+		"dev": "nodemon",
+		"dev:inspect": "nodemon -e ts,json --exec node --inspect -r ts-node/register src/main.ts",
+		"lint": "eslint ./src/**",
+		"lint:fix": "eslint ./src/** --fix",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.20.0",
+		"express": "^4.18.1",
+		"inversify": "^6.0.1",
+		"reflect-metadata": "^0.1.13",
+		"tslog": "^3.3.3"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@typescript-eslint/eslint-plugin": "^5.29.0",
+		"@typescript-eslint/parser": "^5.29.0",
+		"eslint": "^8.18.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"nodemon": "^2.0.18",
+		"prettier": "^2.6.2",
+		"ts-node": "^10.8.1",
+		"typescript": "^4.7.4"
+	}
 }
