Added service and validation

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
+    "tabWidth": 4,
     "singleQuote": true,
     "trailingComma": "all",
-    "useTabs": true,
     "semi": true,
     "bracketSpacing": true,
     "printWidth": 100,
